--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.laibao.kotlin</groupId>
-    <artifactId>KotlinInAction</artifactId>
+    <artifactId>practical-kotlin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.2.30</kotlin.version>
+        <kotlin.version>1.2.71</kotlin.version>
         <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
+        <!--     
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
@@ -33,13 +33,11 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test</artifactId>
@@ -52,17 +50,18 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-
+        -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+         
     <build>
         <plugins>
+            <!--     
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
@@ -81,6 +80,9 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
+            
+            <!--     
             <plugin>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
@@ -112,11 +114,13 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.7.0</version>
+                <!--
                 <executions>
                     <execution>
                         <id>default-compile</id>
@@ -141,6 +145,7 @@
                         </goals>
                     </execution>
                 </executions>
+               -->
             </plugin>
         </plugins>
     </build>
