--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.2.71</kotlin.version>
-        <!--<version>1.3.0</version>-->
+        <!--<kotlin.version>1.2.71</kotlin.version>-->
+        <kotlin.version>1.3.0</kotlin.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -82,8 +82,8 @@
             -->
             
             <plugin>
-                <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
                 <executions>
                     <execution>
