--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.laibao.kotlin</groupId>
     <artifactId>practical-kotlin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>kotlin-basic</module>
+    </modules>
     <packaging>pom</packaging>
 
     <properties>
