--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>1.8</java.version>
         <!--<kotlin.version>1.2.71</kotlin.version>-->
         <kotlin.version>1.3.0</kotlin.version>
+        <kotlinx.coroutines.version>1.0.0</kotlinx.coroutines.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -54,49 +55,41 @@
           <scope>test</scope>
       </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-jdk8 -->
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-jdk8</artifactId>
-            <version>1.0.0</version>
+            <version>${kotlinx.coroutines.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core-common -->
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core-common</artifactId>
-            <version>1.0.0</version>
+            <version>${kotlinx.coroutines.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core -->
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.0.0</version>
+            <version>${kotlinx.coroutines.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-reactive -->
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-reactive</artifactId>
-            <version>1.0.0</version>
+            <version>${kotlinx.coroutines.version}</version>
         </dependency>
 
-
-        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-rx2 -->
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-rx2</artifactId>
-            <version>1.0.0</version>
+            <version>${kotlinx.coroutines.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-reactor -->
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-reactor</artifactId>
-            <version>1.0.0</version>
+            <version>${kotlinx.coroutines.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>junit</groupId>
