--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>kotlin-basic</module>
+        <module>servlet-web-application</module>
+        <module>spring-boot-restful</module>
     </modules>
     <packaging>pom</packaging>
 
