update pom.xml file info

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>kotlin-basic</module>
         <module>servlet-web-application</module>
         <module>spring-boot-restful</module>
+        <module>spring-boot-kotlin-demo</module>
     </modules>
     <packaging>pom</packaging>
 
