--- a/spring-boot-restful/pom.xml
+++ b/spring-boot-restful/pom.xml
@@ -82,6 +82,7 @@
                     <compilerPlugins>
                         <plugin>spring</plugin>
                     </compilerPlugins>
+                    <jvmTarget>1.8</jvmTarget>
                 </configuration>
                 <dependencies>
                     <dependency>
