update pom.xml file info

--- a/simple-kotlin-mybatis/src/main/resources/application.properties
+++ b/simple-kotlin-mybatis/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# Application Name
+spring.application.name=simple kotlin mybatis
+
+# logging path
+#logging.path=./logs
+
 server.port=8080
 
 #db config
@@ -15,9 +21,9 @@ spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 spring.datasource.testWhileIdle=true
 spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useunicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNul
-spring.datasource.username=xxxx
-spring.datasource.password=xxxxx
+spring.datasource.url=jdbc:mysql://**********:3306/test?useunicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=******
+spring.datasource.password=*******
 spring.datasource.validationQuery=SELECT 1 FROM DUAL
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
