--- a/spring-boot-restful/pom.xml
+++ b/spring-boot-restful/pom.xml
@@ -14,14 +14,23 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <!--
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
-        <relativePath/>
-    </parent>
-    -->
+    <developers>
+        <developer>
+            <id>wanglaibao</id>
+            <name>小宝在杭州</name>
+            <email>1131751437@qq.com</email>
+            <url>https://github.com/wanglaibao</url>
+            <roles>
+                <role>Coder</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:wanglaibao/spring-boot-restful.git</connection>
+        <developerConnection>scm:git:git@github.com:wanglaibao/spring-boot-restful.git</developerConnection>
+        <url>https://github.com/wanglaibao/spring-boot-restful</url>
+    </scm>
 
     <dependencyManagement>
         <dependencies>
