--- a/smart-decision-system/pom.xml
+++ b/smart-decision-system/pom.xml
@@ -13,6 +13,24 @@
     <artifactId>smart-decision-system</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <developers>
+        <developer>
+            <id>wanglaibao</id>
+            <name>小宝在杭州</name>
+            <email>1131751437@qq.com</email>
+            <url>https://github.com/wanglaibao</url>
+            <roles>
+                <role>Coder</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:wanglaibao/smart-decison-system.git</connection>
+        <developerConnection>scm:git:git@github.com:wanglaibao/smart-decision-system.git</developerConnection>
+        <url>https://github.com/wanglaibao/smart-decision-system</url>
+    </scm>
+
     <properties>
         <druid.version>1.1.9</druid.version>
         <mybatis.springboot.version>1.3.2</mybatis.springboot.version>
