--- a/kotlin-basic/pom.xml
+++ b/kotlin-basic/pom.xml
@@ -13,5 +13,36 @@
     <artifactId>kotlin-basic</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <properties>
+        <httpclient.version>4.5.6</httpclient.version>
+        <commons-lang3.version>3.3.2</commons-lang3.version>
+        <commons-beanutils.version>1.6</commons-beanutils.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>${commons-beanutils.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>${commons-collections.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
+        </dependency>
+    </dependencies>
 </project>
