--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <!--<kotlin.version>1.2.71</kotlin.version>-->
-        <kotlin.version>1.3.0</kotlin.version>
-        <kotlinx.coroutines.version>1.0.0</kotlinx.coroutines.version>
+        <!--<kotlin.version>1.3.0</kotlin.version>-->
+        <kotlin.version>1.3.10</kotlin.version>
+        <!--<kotlinx.coroutines.version>1.0.0</kotlinx.coroutines.version>-->
+        <kotlinx.coroutines.version>1.0.1</kotlinx.coroutines.version>
         <junit.version>4.12</junit.version>
     </properties>
 
