update pom.xml file info

--- a/smart-decision-system/src/main/resources/application.properties
+++ b/smart-decision-system/src/main/resources/application.properties
@@ -21,9 +21,9 @@ spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 spring.datasource.testWhileIdle=true
 spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.url=jdbc:mysql://************:3306/test?useunicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=**********
-spring.datasource.password=***********
+spring.datasource.url=jdbc:mysql://116.62.138.41:3306/strategic_test?useunicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=dev
+spring.datasource.password=JlDV94BW!
 spring.datasource.validationQuery=SELECT 1 FROM DUAL
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
