--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>simple-kotlin-mybatis</module>
         <module>simple-kotlin-jpa</module>
         <module>kotlin-collection-unleashed</module>
+        <module>designpattern-in-kotlin</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -44,7 +45,7 @@
         <!--<kotlin.version>1.2.71</kotlin.version>-->
         <!--<kotlin.version>1.3.0</kotlin.version>-->
         <!--<kotlin.version>1.3.10</kotlin.version>-->
-        <kotlin.version>1.3.11</kotlin.version>
+        <kotlin.version>1.3.20</kotlin.version>
         <!--<kotlinx.coroutines.version>1.0.0</kotlinx.coroutines.version>-->
         <kotlinx.coroutines.version>1.0.1</kotlinx.coroutines.version>
         <junit.version>4.12</junit.version>
