--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>designpattern-in-kotlin</module>
         <module>oop-in-kotlin</module>
         <module>fp-in-kotlin</module>
+        <module>kotlin-coroutine-introduction</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -47,9 +48,9 @@
         <!--<kotlin.version>1.2.71</kotlin.version>-->
         <!--<kotlin.version>1.3.0</kotlin.version>-->
         <!--<kotlin.version>1.3.10</kotlin.version>-->
-        <kotlin.version>1.3.20</kotlin.version>
+        <kotlin.version>1.3.21</kotlin.version>
         <!--<kotlinx.coroutines.version>1.0.0</kotlinx.coroutines.version>-->
-        <kotlinx.coroutines.version>1.0.1</kotlinx.coroutines.version>
+        <kotlinx.coroutines.version>1.1.1</kotlinx.coroutines.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -121,6 +122,28 @@
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-reactor</artifactId>
             <version>${kotlinx.coroutines.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-io-jvm -->
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-io-jvm</artifactId>
+            <version>0.1.7</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-io-jvm -->
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-io-jvm</artifactId>
+            <version>0.1.7</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-io -->
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-io</artifactId>
+            <version>0.1.7</version>
         </dependency>
 
         <dependency>
