--- a/pom.xml
+++ b/pom.xml
@@ -48,9 +48,11 @@
         <!--<kotlin.version>1.2.71</kotlin.version>-->
         <!--<kotlin.version>1.3.0</kotlin.version>-->
         <!--<kotlin.version>1.3.10</kotlin.version>-->
-        <kotlin.version>1.3.21</kotlin.version>
+        <!--<kotlin.version>1.3.21</kot<kotlin.version>1.3.21</kotlin.version>-->
+        <kotlin.version>1.3.31</kotlin.version>
         <!--<kotlinx.coroutines.version>1.0.0</kotlinx.coroutines.version>-->
-        <kotlinx.coroutines.version>1.1.1</kotlinx.coroutines.version>
+        <!--<kotlinx.coroutines.version>1.1.1</kotlinx.coroutines.version>-->
+        <kotlinx.coroutines.version>1.2.1</kotlinx.coroutines.version>
         <junit.version>4.12</junit.version>
     </properties>
 
